Implement tablet-server communication (server part)
git-svn-id: svn+ssh://redwerk.com/home/svn/likelabs@5079 5beb62dc-ff0c-0410-899a-bd8837d9df5a