@@ -17,6 +17,11 @@
     <name>Web Interface for Like Labs Server</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <slf4j.version>1.6.4</slf4j.version>
+        <jersey.version>1.12</jersey.version>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>${pom.groupId}</groupId>
@@ -70,7 +75,68 @@
             <artifactId>commons-io</artifactId>
             <version>2.2</version>
         </dependency>
-
+    <dependency>
+        <groupId>javax.xml</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.1</version>
+    </dependency>
+    <dependency>
+        <groupId>javax.xml</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.1</version>
+    </dependency>
+       <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-api</artifactId>
+           <version>${slf4j.version}</version>
+       </dependency>
+       <dependency>
+           <groupId>org.slf4j</groupId>
+           <artifactId>slf4j-log4j12</artifactId>
+           <version>${slf4j.version}</version>
+       </dependency>
+		<dependency>
+		    <groupId>javax.ws.rs</groupId>
+		    <artifactId>jsr311-api</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+		<dependency>
+		       <groupId>com.sun.jersey</groupId>
+		       <artifactId>jersey-server</artifactId>
+		       <version>${jersey.version}</version>
+		   </dependency>
+		<dependency>
+		    <groupId>com.sun.jersey</groupId>
+		    <artifactId>jersey-json</artifactId>
+		    <version>1.12</version>
+		</dependency>           
+		   <dependency>
+		       <groupId>com.sun.jersey.contribs</groupId>
+		       <artifactId>jersey-spring</artifactId>
+		       <version>${jersey.version}</version>
+		       <exclusions>
+		           <exclusion>
+		               <groupId>org.springframework</groupId>
+		               <artifactId>spring</artifactId>
+		           </exclusion>
+		           <exclusion>
+		               <groupId>org.springframework</groupId>
+		               <artifactId>spring-core</artifactId>
+		           </exclusion>
+		           <exclusion>
+		               <groupId>org.springframework</groupId>
+		               <artifactId>spring-web</artifactId>
+		           </exclusion>
+		           <exclusion>
+		               <groupId>org.springframework</groupId>
+		               <artifactId>spring-beans</artifactId>
+		           </exclusion>
+		           <exclusion>
+		               <groupId>org.springframework</groupId>
+		               <artifactId>spring-context</artifactId>
+		           </exclusion>
+		       </exclusions>
+		   </dependency>
     </dependencies>
 
     <build>
@@ -80,6 +146,13 @@
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>6.1.26</version>
                 <configuration>
+                
+
+          <fork>true</fork>
+          <meminitial>128m</meminitial>
+          <maxmem>512m</maxmem>
+           
+                	<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
                     <contextPath>/</contextPath>
                     <scanIntervalSeconds>3</scanIntervalSeconds>
                     <scanTargetPatterns>
